<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="boavinda">Bem vindo!</string>
    <string name="app_name">PortableVision</string>
    <string name="selecione">Selecione a opção desejada</string>
    <string name="adicionar_local">Adicionar local</string>
    <string name="alterar_local">Alterar local</string>
    <string name="procurar_local">Procurar local</string>
    <string name="excluir_local">Excluir local</string>
    <string name="listar_locais">Listar locais</string>
    <string name="descricao">Descrição do sistema</string>
    <string name="nome_local">Nome do local</string>
    <string name="digite_nome_local">Digite o nome do local</string>
    <string name="endereco">Endereço</string>
    <string name="digite_endereco">Digite o endereço</string>
    <string name="cep">CEP</string>
    <string name="digite_cep">Digite o CEP</string>
    <string name="voltar">Voltar</string>
    <string name="adicionar">Adicionar</string>
    <string name="procurar">Procurar</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="navegacao">Navegação</string>
    <string name="iniciar">Iniciar</string>
    <string name="navegar">Navegar</string>
    <string name="interacao">Interação</string>
    <string name="descricao_adicionar">Descrição adicionar</string>
    <string name="descricao_alterar">Descrição alterar</string>
    <string name="descricao_deletar">Descrição deletar</string>
    <string name="descricao_procurar">Descrição procurar</string>
    <string name="descricao_listar">Descrição listar</string>
    <string name="descricao_navegacao">Descrição navegação</string>
    <string name="texto_descricao_adicionar">A funcionalidade de adicionar local dispõe de 3 campos: "Nome do local", "Endereço" e "CEP", sendo que o campo "Nome do local" e pelo menos o "Endereço" ou "CEP" devem ser informados para que possa haver a navegação posteriormente. Para o CEP, é necessário digitar todos os números juntos, como por exemplo, 04521889, para que, se for feita a navegação por tal, o Google ache este endereço. Logo após o preenchimento dos campos, pode-se haver o toque no botão "Adicionar", onde, se tudo der certo, o sistema apresentará a mensagem "Local cadastrado com sucesso!". Porém, se for deixado algum campo obrigatório em branco a mensagem "Digite pelo menos o nome do local e o endereço" é apresentada ou se ocorrer algum erro será apresentada a mensagem "Ocorreu um erro, tente novamente". Ao tocar no botão "Voltar", o sistema volta à tela inicial.</string>
	<string name="texto_descricao_alterar">A funcionalidade de alterar local dispõe de 3 campos, sendo que, primeiramente, deve-se preencher o campo "Nome do local" e então tocar no botão "Procurar", onde o sistema verifica se o local existe. Se o local existir, é apresentada a mensagem "Local encontrado com sucesso!", senão, "Local não encontrado!". Se o local for encontrado, o botão "Alterar" é ativado e o campo endereço e CEP (se houver) são preenchidos. Se houver o toque no botão "Procurar" novamente, sendo que o local já foi encontrado, é apresentada a mensagem "O local já foi encontrado!". Com isso, pode ser feita a alteração de qualquer um dos campos e, após tal ação, há o toque no botão "Alterar" para realizar a alteração do local. Se um dos campos obrigatórios estiver em branco, é apresentada a mensagem "Preencha pelo menos o nome do local e o endereço". Caso a alteração seja feita, é apresentada a mensagem "Alteração realizada com sucesso!", senão, "Não foi possível realizar a alteração". Ao tocar no botão "Voltar", o sistema volta à tela inicial.</string>
    <string name="texto_descricao_excluir">A funcionalidade de excluir local dispõe de um campo do nome do local. Havendo o preenchimento deste campo, pode-se tocar no botão "Procurar" para verificar se o nome do local realmente existe, sendo que, se existir, aparece a mensagem "Local encontrado com sucesso!", senão, "Local não encontrado!". Se não houver o preenchimento do campo aparece a mensagem "Digite o nome do local". Caso o local seja encontrado, o botão "Excluir" é ativado e, então, havendo o toque neste botão, o sistema exclui da base de dados o local, aparecendo a mensagem "Local excluído com sucesso!", ou se ocorrer algum erro, "Não foi possível excluir o local".</string>
    <string name="texto_descricao_procurar">A funcionalidade de procurar local dispõe de um campo que é o "Nome do local". Havendo o preenchimento deste campo, pode-se tocar no botão "Procurar" para verificar se o nome do local realmente existe, sendo que, se existir, aparece a mensagem "Local encontrado com sucesso!", senão, "Local não encontrado!". Se não houver o preenchimento do campo aparece a mensagem "Digite o nome do local". Havendo o encontro do local, o botão "Navegar" é ativado e então, havendo o toque neste botão, inicia-se a navegação por GPS para este local. Se mesmo com a mensagem do sistema se não ter encontrado o local houver o toque no botão "Navegar", aparece a mensagem "Local não encontrado!". Ao haver o toque no botão "Voltar", o sistema volta à tela inicial.</string>
    <string name="texto_descricao_listar">A funcionalidade de listar locais dispõe de uma lista de todos os locais cadastrados pelo usuário, servindo como referência para saber quais os locais que estão cadastrados no sistema até o momento.</string>
    <string name="texto_descricao_navegacao">A funcionalidade de navegação dispõe do campo "Nome do local", sendo que, havendo o preenchimento do mesmo, ao tocar no botão "Procurar" o sistema verifica se existe o local informado neste campo, onde se existir, apresenta a mensagem "Nome do local encontrado!", senão, "Não existe este local". Sendo encontrado o nome do local, o botão "Iniciar" é ativado, podendo então haver o toque no mesmo, sendo que, se feita tal ação, o sistema inicia o serviço de navegação por GPS para o local que foi informado, porém, caso este local não exista, aparece a mensagem "Local inválido!" e se caso o campo esteja em branco aparece a mensagem "Digite o nome do local e depois pressione o botão procurar". Ao tocar no botão "Voltar", o sistema volta à página inicial.</string>
	
</resources>