<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_gravity="center"
        />
    
    <Button 
        android:id="@+id/btDescricaoAdicionar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_adicionar"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />
    
    <Button 
        android:id="@+id/btDescricaoAlterar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_alterar"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />
    
    <Button 
        android:id="@+id/btDescricaoDeletar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_deletar"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />
    
    <Button 
        android:id="@+id/btDescricaoProcurar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_procurar"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />
    
    <Button 
        android:id="@+id/btDescricaoListar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_listar"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />
    
    <Button 
        android:id="@+id/btDescricaoNavegacao"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_navegacao"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />
    
    <Button 
    	android:id="@+id/btVoltar"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:text="@string/voltar"
      	android:layout_marginTop="60dp"
      	/>
    

</LinearLayout>